--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <footer>
         <div class="partFooter">
-            <img src="/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
         </div>
         <div class="partFooter">
             <h4>Servicios</h4>
